--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "body-parser": "^1.20.0",
     "express": "^4.17.3",
     "mysql2": "^2.3.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
