--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/satyamgupta0/social_media_website#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "ejs": "^3.1.7",
     "express": "^4.17.3",
     "mysql2": "^2.3.3"
   },
