--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   },
   "homepage": "https://github.com/satyamgupta0/social_media_website#readme",
   "dependencies": {
+    "alert": "^5.0.10",
     "body-parser": "^1.20.0",
     "express": "^4.17.3",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "popups": "^1.1.3",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
