--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "homepage": "https://github.com/satyamgupta0/social_media_website#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.7",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
