--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^3.1.7",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "node-localstorage": "^2.2.1"
   }
 }
